objects/Account.object
<CustomObject>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM (MM$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Code__c</fullName>
        <description>Account Executive Code, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <formula>Ejecutivo_de_Cuenta__r.ROL_Number__c</formula>
        <label>Account Executive Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actividad_Economica_SBIF__c</fullName>
        <label>Actividad Económica (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
                <value>
                    <fullName>Adm. Pública y Defensa</fullName>
                </value>
                <value>
                    <fullName>Agricultura</fullName>
                </value>
                <value>
                    <fullName>Agricultura y Ganadería excepto Frutic.</fullName>
                </value>
                <value>
                    <fullName>Agroindustria</fullName>
                </value>
                <value>
                    <fullName>Alimentos, Bebidas y Tabaco</fullName>
                </value>
                <value>
                    <fullName>Bienes Inmuebles y Serv. Prest. a Empre.</fullName>
                </value>
                <value>
                    <fullName>Captación y Distribución de Agua</fullName>
                </value>
                <value>
                    <fullName>Celusosa y Papeles</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Mayor</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Menor</fullName>
                </value>
                <value>
                    <fullName>Comercio x Menor, Restaurantes y Hoteles</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Construcción de otras obras</fullName>
                </value>
                <value>
                    <fullName>Construcción de Viviendas</fullName>
                </value>
                <value>
                    <fullName>Construcciones no residenciales</fullName>
                </value>
                <value>
                    <fullName>Construcciones residenciales</fullName>
                </value>
                <value>
                    <fullName>Crédito de consumo</fullName>
                </value>
                <value>
                    <fullName>Crédito hipotecario para la vivienda</fullName>
                </value>
                <value>
                    <fullName>Cuero y Calzado</fullName>
                </value>
                <value>
                    <fullName>Cultivo de Salmones y Truchas</fullName>
                </value>
                <value>
                    <fullName>Distribución y Comercialización de Bebidas Alcohólicas</fullName>
                </value>
                <value>
                    <fullName>Diversión y Esparcimiento</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Agua</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Vapor</fullName>
                </value>
                <value>
                    <fullName>Estab. Financieros y de Seguros</fullName>
                </value>
                <value>
                    <fullName>Explotación de Bosques</fullName>
                </value>
                <value>
                    <fullName>Explotación de Minas y Canteras</fullName>
                </value>
                <value>
                    <fullName>Fab. Prod. Mineros, Metálicos y No Metálicos</fullName>
                </value>
                <value>
                    <fullName>Fruticultura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Opps__c</fullName>
        <label>$$ Oportunidades</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atencion_diferencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atención diferencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizaci_n_de_informar_a_organismo_FAT__c</fullName>
        <label>Autorización de informar a organismo FAT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Circ_10672_10673_BCS__c</fullName>
        <label>BCS (Circ. 10672-10673 BCS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BICE_Classification_del__c</fullName>
        <description>La Clasificacion BICE: solo es visible para Persona Jurídica.
(No confundir con Clasificación Comercial BICE Comercial_clasification__c que es para Personas Naturales).</description>
        <label>Clasificación BICE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANCO E INSTITUCIONES FINANCIERAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS PERSONALES</fullName>
                </value>
                <value>
                    <fullName>GRAN EMPRESA</fullName>
                </value>
                <value>
                    <fullName>INTERMEDIARIO DE VALORES</fullName>
                </value>
                <value>
                    <fullName>INVERSIONISTA INSTITUCIONAL</fullName>
                </value>
                <value>
                    <fullName>MEDIANA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>MEGA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>PERSONAS NATURALES</fullName>
                </value>
                <value>
                    <fullName>SOCIEDADES PRODUCTIVAS</fullName>
                </value>
                <value>
                    <fullName>SOCIEDAD DE INV.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banco__c</fullName>
        <description>Banco con el que opera</description>
        <label>Banco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 FIRST BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK (CHILE)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN EXPRESS BANK</fullName>
                </value>
                <value>
                    <fullName>AMERICAN NATIONAL BANK</fullName>
                </value>
                <value>
                    <fullName>AMTRADE BANK</fullName>
                </value>
                <value>
                    <fullName>BAC FLORIDA BANK</fullName>
                </value>
                <value>
                    <fullName>BANCA COMMERCIALE ITALIANA</fullName>
                </value>
                <value>
                    <fullName>BANCO ATLANTICO</fullName>
                </value>
                <value>
                    <fullName>BANCO BBVA</fullName>
                </value>
                <value>
                    <fullName>BANCO BICE</fullName>
                </value>
                <value>
                    <fullName>BANCO BILBAO VIZCAYA</fullName>
                </value>
                <value>
                    <fullName>BANCO CENTRAL DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO CONSORCIO</fullName>
                </value>
                <value>
                    <fullName>BANCO CREDITO INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE/EDWARDS-CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CREDITO E INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL DESARROLLO</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL ESTADO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL S A</fullName>
                </value>
                <value>
                    <fullName>BANCO ECONOMICO</fullName>
                </value>
                <value>
                    <fullName>BANCO EDWARDS CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO EXTERIOR DE ESPANA</fullName>
                </value>
                <value>
                    <fullName>BANCO EXTERIOR DE ESPAQA</fullName>
                </value>
                <value>
                    <fullName>BANCO FALABELLA</fullName>
                </value>
                <value>
                    <fullName>BANCO INTERNACIONAL</fullName>
                </value>
                <value>
                    <fullName>BANCO ITAÚ CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO MERCANTIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIF_Id__c</fullName>
        <description>This CIF Id will be used as the external id to link external data (from MDM) into Salesforce accounts</description>
        <externalId>true</externalId>
        <label>CIF Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calle_RL__c</fullName>
        <description>Calle del representante legal para inversiones</description>
        <inlineHelpText>Ingrese calle del representante legal</inlineHelpText>
        <label>Calle RL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_comercial_Inv__c</fullName>
        <label>Calle comercial Inv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_comercial__c</fullName>
        <label>Calle comercial</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_particular_Inv__c</fullName>
        <label>Calle particular Inv</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_particular__c</fullName>
        <label>Calle particular</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carpeta_comercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta comercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carpeta_operativa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta operativa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categoria_Deudor__c</fullName>
        <label>Categoría Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Celular_Comercial_Inv__c</fullName>
        <label>Celular comercial Inv</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Circ_57_2017_UAF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circular 57 2017 UAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_comercial_Inv__c</fullName>
        <label>Ciudad o Provincia comercial Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_comercial__c</fullName>
        <label>Ciudad o Provincia comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_particular_Inv__c</fullName>
        <label>Ciudad o Provincia particular Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_particular__c</fullName>
        <label>Ciudad o Provincia particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clasificacion_de_Riesgo_SBIF__c</fullName>
        <description>La Clasificación de riesgo SBIF solo es visible para Persona Jurídica.</description>
        <label>Clasificación de Riesgo (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clasificacion_submargenes__c</fullName>
        <label>Clasificación submárgenes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personas</fullName>
                </value>
                <value>
                    <fullName>Clientes Corporativos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_APV__c</fullName>
        <inlineHelpText>Es Cliente de Ahorro Previsional Voluntario (APV)?</inlineHelpText>
        <label>Cliente APV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_AP__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonios con Cuentas no Administradas?</inlineHelpText>
        <label>Cliente AP Cuentas no Administradas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_AP_con_Administraci_n_Cartera__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonio con Administración de Cartera</inlineHelpText>
        <label>Cliente AP con Administración Cartera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_ARE_s__c</fullName>
        <inlineHelpText>Es Cliente del Área de Referidos Externos (ARE&apos;s)</inlineHelpText>
        <label>Cliente ARE&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_BIA__c</fullName>
        <label>Cliente BIA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Banco__c</fullName>
        <label>Cliente Banco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <isActive>false</isActive>
                    <label>S</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Relacionado__c</fullName>
        <inlineHelpText>Es un Cliente Relacionado?</inlineHelpText>
        <label>Cliente Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_desde__c</fullName>
        <label>Cliente desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_resultado_compliance_tracker__c</fullName>
        <label>Código resultado compliance tracker</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Cellphone__c</fullName>
        <label>Teléfono móvil comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Classification__c</fullName>
        <label>Clasificación Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_FAX_Other__c</fullName>
        <description>Commercial FAX Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial FAX Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Landline__c</fullName>
        <description>Commercial Landline, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Phone_Other__c</fullName>
        <description>Commercial Phone Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Phone Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comuna_RL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Comuna representante legal inversiones.</description>
        <inlineHelpText>Ingrese comuna representante legal.</inlineHelpText>
        <label>Comuna RL</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Cuentas (Comuna RL)</relationshipLabel>
        <relationshipName>Cuentas4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_comercial_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna comercial Inv</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Cuentas (Comuna comercial Inv)</relationshipLabel>
        <relationshipName>Cuentas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna comercial</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_particular_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna particular Inv</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Cuentas (Comuna particular Inv)</relationshipLabel>
        <relationshipName>Cuentas3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_particular__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna particular</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Cuentas (Comuna particular)</relationshipLabel>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contador__c</fullName>
        <formula>(now()-CreatedDate)*86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contador</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copia_de_RUT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copia de RUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copia_inscripcion_original__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copia inscripción original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crear_Cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Al marcarlo, ejecutivo solicita la creación del cliente al área de creación de Clientes</description>
        <label>Crear Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Credit_Limit__c</fullName>
        <description>Field to store Current MAC Credit Limit  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Expiration_Date__c</fullName>
        <description>Field to store Current MAC Expiration Date  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Presentation_Date__c</fullName>
        <description>Field to store the Current MAC Presentation Date - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Request_Date__c</fullName>
        <description>Field to store the current MAC request date - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Request_Number__c</fullName>
        <description>Field to store the MAC request Number - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Request Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Status__c</fullName>
        <description>Field to store Current MAC Status  - for a Comité Meeting that occurs in respect to a customer. Below the Codes and corresponding values of description, used in this picklist.

CODIGO	DESCRIPCION
A	APROBADO
D	DIGITADO POR AUXILIAR
P	EN PROCESO POR EJECUTIVO
R	RECHAZADO
PES04	EN PROCESO COMITE
PES06	CONDICIONADO COMITE
M	MODIFICACION GCIA DE CREDITOS
PES10	MANUAL
PES07	CADUCADO</description>
        <label>Current MAC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APROBADO</fullName>
                </value>
                <value>
                    <fullName>DIGITADO POR AUXILIAR</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO POR EJECUTIVO</fullName>
                </value>
                <value>
                    <fullName>RECHAZADO</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO COMITE</fullName>
                </value>
                <value>
                    <fullName>CONDICIONADO COMITE</fullName>
                </value>
                <value>
                    <fullName>MODIFICACION GCIA DE CREDITOS</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
                <value>
                    <fullName>CADUCADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Legal_Person_Consumer__c</fullName>
        <label>Customer Legal Person Consumer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Si</label>
                </value>
                <value>
                    <fullName>null</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_type_other_rating_c__c</fullName>
        <label>Tipo de Cliente otra clasificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gerencia Finanzas</fullName>
                </value>
                <value>
                    <fullName>Gerencia Comercial</fullName>
                </value>
                <value>
                    <fullName>Cliente Corr. de Bol</fullName>
                    <label>Cliente Corredora de Bolsa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAI_de_la_Soc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAI de la Soc.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCV_Circ_190_SVS__c</fullName>
        <label>DCV (Circ. 190 SVS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_as_para_vencimiento__c</fullName>
        <formula>Fecha_de_vencimiento_MAC__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días para vencimiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_last_modify__c</fullName>
        <formula>NOW()-LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días de última modificación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descripci_n_cuenta__c</fullName>
        <label>Descripción cuenta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deuda_Sistema_Financiero_MM_pesos__c</fullName>
        <label>Deuda Sistema Financiero (MM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documentaci_n_sustentatoria_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentación sustentatoria EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_COMEX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo COMEX</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Leasing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Leasing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ejecutivos_Leasing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_de_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Cuenta</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_de_Inversiones__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Inversiones</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Comercial_Inv__c</fullName>
        <label>Email Comercial Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Rep_Legal_Inv__c</fullName>
        <label>Email Rep Legal Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_facturacion_Inv__c</fullName>
        <label>Email facturación Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escritura_publica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escritura pública</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_Creaci_n_de_Cliente__c</fullName>
        <label>Creación Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Realizado</fullName>
                </value>
                <value>
                    <fullName>Reparos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>